--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "bio-picture.png"
+  avatar           : "bio-photo.jpeg"
   name             : "William Koch"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
