--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,4 +5,4 @@ William Koch:
   uri         : "https://william-koch.com"
   email       : "mail [at] william-koch.com"
   bio         : "TBD"
-  avatar      : "bio-picture.jpg"
+  avatar      : "bio-photo.jpeg"
