--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,8 +1,8 @@
 # Authors
 
 William Koch:
-  name        : "William Koch"
+  name        : "William"
   uri         : "https://william-koch.com"
-  email       : "mail [at] william-koch.com"
+  email       : "mail@william-koch.com"
   bio         : "TBD"
   avatar      : "bio-photo.jpeg"
