--- a/_config.yml
+++ b/_config.yml
@@ -202,6 +202,9 @@ collections:
   teaching:
     output: true
     permalink: /:collection/:path/
+  papers:
+    output: true
+    permalink: /:collection/:path/
   publications:
     output: true
     permalink: /:collection/:path/
