Update CV, add new publication, minor visual tweaks to site.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,14 @@
 # main links links
 main:
-  - title: "Papers"
+  - title: "CV"
+    url: /cv/
+    
+  - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/
+  - title: "Preprints"
+    url: /preprints/
         
   - title: "Blog Posts"
     url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
+
