--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ author:
   name             : "William Koch"
   pronouns         : # example: "she/her"  
   bio              : "Interested in machine learning\nand computer graphics."
-  location         : "Munich"
-  employer         : "Boston Consulting Group"
+  location         : "Princeton, NJ, USA"
+  employer         : "Princeton University"
   uri              : # URL
-  email            : "mail@william-koch.com" 
+  email            : "william.koch@princeton.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -208,6 +208,9 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
+  preprints:
+    output: true
+    permalink: /:collection/:path/
   portfolio:
     output: true
     permalink: /:collection/:path/
@@ -249,6 +252,15 @@ defaults:
   - scope:
       path: ""
       type: publications
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
+  # _preprints
+  - scope:
+      path: ""
+      type: preprints
     values:
       layout: single
       author_profile: true
